Added GetPhoneNumbersByCustomerID endpoint and few other corrections
