# src/main/java/com/belong/phonebank/controller/CustomerController.java
@@ -1,6 +1,7 @@
 package com.belong.phonebank.controller;
 
 
+import com.belong.phonebank.dto.PhoneNumberResponse;
 import com.belong.phonebank.exception.ResourceNotFoundException;
 import com.belong.phonebank.dto.CustomerResponse;
 import com.belong.phonebank.dto.CustomerResponseDto;
@@ -8,21 +9,27 @@ import com.belong.phonebank.service.CustomerService;
 import jakarta.validation.constraints.Positive;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
-@RequestMapping("/customer")
+@RequestMapping("/phone-bank/customer")
 @Validated
 public class CustomerController {
 
     @Autowired
     public CustomerService service;
 
+
+    // Get Customer by id
     @GetMapping(value = "/{id}")
-    public CustomerResponseDto getPhoneNumbersById(@PathVariable @Positive Long id) throws ResourceNotFoundException {
+    public CustomerResponseDto getCustomerById(@PathVariable @Positive Long id) throws ResourceNotFoundException {
         return new CustomerResponseDto(new CustomerResponse(service.getCustomer(id)));
+    }
+
+
+    // Get Customer's all phone numbers by Customer id
+    @GetMapping(value = "/phone-numbers/{id}")
+    public PhoneNumberResponse getCustomerPhoneNumbersById(@PathVariable @Positive Long id) throws ResourceNotFoundException {
+        return service.getCustomerPhonNumbers(id);
     }
 }
