# src/main/resources/swagger.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  title: Phone Bank - OpenAPI 3.0
+  title: Belong Phone Bank - OpenAPI 3.0
   description: |-
     This is a Phone Bank Service based on the OpenAPI 3.0 specification.  
 
@@ -23,42 +23,117 @@ tags:
     description: Phone numbers for a customer
 paths:
 
-  /phone-bank/phone-numbers:
+  /customer/phone-numbers/{customerId}:
     get:
       tags:
-        - PhoneNumber
-      summary: Returns all phone numbers
-      description: Returns all phone numbers
-      operationId: getPhoneNumbers
-
+        - Customer
+      summary: Returns all phone numbers for a given customer id
+      description: Returns all phone numbers for a given customer id
+      operationId: getCustomerPhoneNumbersById
+      parameters:
+        - name: customerId
+          in: path
+          description: ID of the customer
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    allOf:
-                      - properties:
-                          phoneNumbers:
-                            type: array
-                            items:
-                              $ref: '#/components/schemas/PhoneNumber'
-                      - $ref: '#/components/schemas/PaginationResponse'
+                $ref: '#/components/schemas/PhoneNumberResponse'
 
         '400':
-          description: Bad Request
+          description: Invalid ID
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+        '404':
+          description: Customer not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /customers/{customerId}:
+    get:
+      tags:
+        - Customer
+      summary: Returns Customer details for a given customer id
+      description: Returns Customer details for a given customer id
+      operationId: getCustomerById
+      parameters:
+        - name: customerId
+          in: path
+          description: ID of the customer
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CustomerResponseDto'
+
+        '400':
+          description: Invalid ID
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+        '404':
+          description: Customer not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 
 
-  /phone-bank/updateActivation/{phoneNumberId}:
+  /phone-numbers:
+    get:
+      tags:
+        - PhoneNumber
+      summary: Returns all phone numbers
+      description: Returns all phone numbers
+      operationId: getPhoneNumbers
+      parameters:
+        - name: pageNo
+          in: query
+          description: Page No
+          schema:
+            type: integer
+            format: int64
+        - name: pageSize
+          in: query
+          description: Page Size
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PhoneNumberResponseDto'
+
+
+  /activateNumber/{phoneNumberId}:
     put:
       tags:
         - PhoneNumber
       summary: Activate / Deactivate a phone number
       description: Activate / Deactivate a phone number
-      operationId: updateActivation
+      operationId: activateNumber
       parameters:
         - name: phoneNumberId
           in: path
@@ -75,52 +150,45 @@ paths:
               schema:
                 type: object
                 properties:
-                  phonenumber:
+                  phoneNumber:
                     $ref: '#/components/schemas/PhoneNumber'
 
         '400':
-          description: Invalid ID supplied
-        '404':
-          description: Phone number not found
-
-
-
-  /customer/phone-numbers/{customerId}:
-    get:
-      tags:
-        - Customer
-      summary: Returns all phone numbers for a given customer id
-      description: Returns all phone numbers for a given customer id
-      operationId: getPhoneNumbersById
-      parameters:
-        - name: customerId
-          in: path
-          description: ID of the customer
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: successful operation
+          description: Invalid ID
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    properties:
-                      customer:
-                        $ref: '#/components/schemas/Customer'
+                $ref: '#/components/schemas/ErrorResponse'
 
-        '400':
-          description: Invalid ID supplied
         '404':
           description: Customer not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+
+
+
 
 
 components:
   schemas:
+
+    Meta:
+      type: object
+      properties:
+        totalRecords:
+          type: integer
+          format: int64
+          example: 10
+        totalPages:
+          type: integer
+          format: int64
+          example: 10
+
+
+
     Customer:
       type: object
       properties:
@@ -147,7 +215,7 @@ components:
         id:
           type: integer
           format: int64
-          example: 100000
+          example: 10
         phoneNumber:
           type: string
           example: 111-222-333
@@ -155,6 +223,39 @@ components:
           type: boolean
       xml:
         name: phonenumber
+
+    PhoneNumberResponse:
+      type: object
+      properties:
+        phoneNumbers:
+          type: array
+          items:
+            $ref: '#/components/schemas/PhoneNumber'
+
+    PhoneNumberResponseDto:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/PhoneNumberResponse'
+        Meta:
+          $ref: '#/components/schemas/Meta'
+    CustomerResponseDto:
+      type: object
+      properties:
+        data:
+          properties:
+            customer:
+              $ref: '#/components/schemas/Customer'
+
+    ErrorResponse:
+      type: object
+      properties:
+        errorCode:
+          type: string
+          example: 400
+        message:
+          type: string
+          example: Invalid Id
 
     PaginationResponse:
       type: object
